src/objects/Hito_relevante__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vencimiento Contrato Activo con Nosotros</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato Activo con la Competencia</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP TI</fullName>
                </value>
                <value>
                    <fullName>Evento Para Nuestros Clientes</fullName>
                </value>
                <value>
                    <fullName>Evento Relevante de la Industria</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato del Servicio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contenedor_de_hito__c</fullName>
        <label>Contenedor de hito</label>
        <referenceTo>Contenedor_de_hito__c</referenceTo>
        <relationshipLabel>Hitos relevantes</relationshipLabel>
        <relationshipName>Hitos_relevantes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <label>Hito relevante</label>
    <nameField>
        <label>Nombre de Hitos relevantes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hitos relevantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>